# origin-os-beta

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backends/memory/: pyproject.toml
backends/memory/origin_backend_memory/: __init__.py  chain_store.py
backends/sqlite/: pyproject.toml
backends/sqlite/origin_backend_sqlite/: __init__.py  chain_store.py
docs/adr/: 0001-canonical-json.md  0002-manifest-v1-scope-and-v2-evolution.md  README.md
docs/architecture/: README.md  overview.md  storage-backends.md
docs/protocols/: README.md  agent-execution-chain-provenance.md  manifest-evolution.md  manifest-v1.md
docs/runbooks/: README.md  verify-a-chain.md
fixtures/attestations/: .gitkeep  README.md
fixtures/attestations/invalid/: mutated_payload_after_signing.json  wrong_public_key_verification.json
fixtures/attestations/valid/: signed_payload.json
fixtures/chains/: .gitkeep  README.md
fixtures/chains/invalid/: broken_previous_step_digest.json  duplicate_step_index.json  invalid_timestamp.json  tampered_manifest_digest.json  wrong_run_id_mid_chain.json
fixtures/chains/valid/: chain_two_steps.json
fixtures/invalid/: .gitkeep  broken_hash_chain.json
fixtures/valid/: .gitkeep  chain_two_steps.json
libs/attestation/: pyproject.toml
libs/attestation/origin_attestation/: __init__.py  key_management.py  payloads.py  signers.py  signing.py  types.py  verification.py
libs/chain-verify/: pyproject.toml
libs/chain-verify/origin_chain_verify/: __init__.py  reports.py  validators_chain.py  validators_step.py  verified_store.py  verifier.py
libs/crypto/: pyproject.toml
libs/crypto/origin_crypto/: __init__.py  ed25519.py  fingerprints.py  merkle.py
libs/protocol-core/: pyproject.toml
libs/protocol-core/origin_protocol_core/: __init__.py  canonical.py  chain_store.py  errors.py  execution_harness.py  manifest.py  types.py
schemas/jsonschema/: .gitkeep  manifest-v1.json
schemas/migrations/: .gitkeep  README.md
solana/agent-key-registry/programs/agent-key-registry/src/: lib.rs
specs/attestation/: README.md  attestation-payload.md  solana-registry.md
specs/chain-store/: README.md  chain-store-protocol.md
specs/chain-verification/: README.md  chain-rules.md
specs/manifests/: README.md  manifest-v1.md
tests/compatibility/: test_fixture_attestations.py  test_fixture_chains.py
tests/integration/: test_execution_flow.py  test_smoke_flow.py
tests/unit/: test_attestation.py  test_attestation_flow.py  test_attestation_types.py  test_chain_verify.py  test_execution_harness.py  test_key_management.py  test_manifest.py  test_manifest_digest.py  test_memory_backend.py  test_protocol_core_split.py  test_signers.py  test_sqlite_backend.py  test_verified_store.py  test_verifier.py
tools/cli/: pyproject.toml
tools/cli/origin_cli/: __init__.py  main.py
