[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-os-beta-workspace"
version = "0.1.0"
description = "Workspace for Origin OS Beta"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Origin OS" }]
dependencies = []

[tool.pytest.ini_options]
pythonpath = [
  "libs/protocol-core",
  "libs/chain-verify",
  "libs/attestation",
  "libs/crypto",
  "backends/memory",
  "tools/cli",
]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
source = [
  "libs/protocol-core/origin_protocol_core",
  "libs/chain-verify/origin_chain_verify",
  "libs/attestation/origin_attestation",
  "libs/crypto/origin_crypto",
  "backends/memory/origin_backend_memory",
  "tools/cli/origin_cli",
]
