[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-os-beta-workspace"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [
  "libs/protocol-core",
  "libs/chain-verify",
  "libs/attestation",
  "libs/crypto",
  "backends/memory",
  "backends/sqlite",
  "tools/cli",
]
testpaths = ["tests"]
addopts = "-q"
