[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-backend-sqlite"
version = "0.1.0"
description = "SQLite-backed ChainStore backend for Origin OS"
requires-python = ">=3.11"
dependencies = ["origin-protocol-core"]

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_backend_sqlite*"]
