[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-attestation"
version = "0.1.0"
description = "Attestation payload builder and Ed25519 sign/verify for Origin OS"
requires-python = ">=3.11"
dependencies = ["origin-protocol-core", "origin-crypto", "cryptography>=41"]

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_attestation*"]
