[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-attestation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "origin-protocol-core",
  "origin-crypto",
  "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_attestation*"]
