[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-crypto"
version = "0.1.0"
description = "Cryptographic primitives for Origin OS"
requires-python = ">=3.11"
dependencies = ["cryptography>=41"]

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_crypto*"]
