[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-protocol-core"
version = "0.1.0"
description = "Core manifest model and ChainStore protocol for Origin OS"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_protocol_core*"]
