[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-protocol-core"
version = "0.1.0"
description = "Core protocol models and canonicalization for Origin OS Beta"
readme = "../../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Origin OS" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_protocol_core*"]
