[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-cli"
version = "0.1.0"
description = "CLI tools for Origin OS chain inspection and verification"
requires-python = ">=3.11"
dependencies = ["origin-protocol-core", "origin-chain-verify"]

[project.scripts]
origin-verify = "origin_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_cli*"]
