[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "origin-protocol-core",
  "origin-chain-verify",
  "origin-attestation",
]

[project.scripts]
origin-verify = "origin_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["origin_cli*"]
